--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.NoteDetailsActivity"
-            android:label="@string/title_activity_note_details"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".activities.CreateNoteActivity"
             android:label="@string/title_activity_create_note"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".activities.NoteListActivity"></activity>
     </application>
 
 </manifest>
