--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     compile "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
+    //Dagger 2 dependencies
+    compile "com.google.dagger:dagger-android-support:2.13"
+    compile "com.google.dagger:dagger:2.13"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.13"
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
