--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile "com.google.dagger:dagger:2.13"
     annotationProcessor "com.google.dagger:dagger-compiler:2.13"
 
+    //Firebase dependencies
+    compile 'com.google.firebase:firebase-firestore:11.8.0'
+
     //3rd party library
     compile 'com.squareup.picasso:picasso:2.5.2'
 
